# bookmarks

./: .gitignore  LICENSE  README.md  index.htm  index.html  pyproject.toml  queries.sql  sample.py
app/: __main__.py  db_engine.py
gunicorn-scripts/: gunicorn.conf.py  server.sh  start.sh  stop.sh
libbm/: __init__.py  db_engine.py  service.py
server/: __init__.py  __main__.py
static/js/: list.js
web/: index.html
web/create/: index.html
web/edit/: index.html
web/sites/: index.html
web/static/css/: main.css
web/static/js/: main.js
web/tags/: index.html
